# intro-cd

./: .pre-commit-config.yaml  README.md  new.py  pyproject.toml
Tarea_1/: Tarea1_resolucion.ipynb  model_lstm.h5  shakespeare_propuesta.ipynb
Tarea_2/: Tarea2_resolucion.ipynb
